Fix the "jump to" accessibility links
For consistency with other skins as well as to not show 'em by default.
Code sporked from Gamepress.

Also blank the [[MediaWiki:Metrolook-tiles]] i18n msg so that not every site out there using Metrolook hotlinks a bunch of long-gone images.

(cherry picked from commit 813ce573998e4d9d09fc98ec716f1ffba6f45998)

--- a/components/main/navigation.less
+++ b/components/main/navigation.less
@@ -162,3 +162,16 @@
 		}
 	}
 }
+
+/* Copy of mixin-screen-reader-text() LESS mixin from /resources/src/mediawiki.less/mediawiki.mixins.less@REL1_32 */
+.mw-jump-link:not( :focus ) {
+	display: block;
+	position: absolute !important; /* stylelint-disable-line declaration-no-important */
+	clip: rect( 1px, 1px, 1px, 1px );
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	overflow: hidden;
+}
